html css js loader

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url(./variables.css);
+@import url(./loader.css);
 @import url(./header.css);
 @import url(./dashboard.css);
 @import url(./footer.css);
